num_enum/tests/try_build/nightly/compile_fail/multiple_catch_all.stderr
error: Variant with `catch_all` must be a tuple with exactly 1 field matching the repr type
 --> tests/try_build/nightly/compile_fail/multiple_catch_all.rs:6:16
  |
6 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
